Split CsvFile class